Fix slider heading on mobile too large

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -114,6 +114,17 @@ nav {
   font-size: 5em;
 }
 
+.title-headline-slider {
+  @include media-breakpoint-up(md){
+    font-size: 4.1em;
+  }
+  font-weight: 300;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: transparentize($akz-darkblue ,0.5);
+}
+
 .menu-item.text-primary a {
   color: $primary;
 }
